infrastructure/controllers/longhorn/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.home.youriulbri.ch
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
